new social link disabled
yes

--- a/index.html
+++ b/index.html
@@ -249,15 +249,15 @@ Give me a call on<br>
 <strong>+918593804427</strong><br><br>
 or send me an email at<br>
 <a href="mailto:jayagovindem@gmail.com"><strong>jayagovindem@gmail.com</strong></a>
-<br><br>Follow<br>
-<div class="social">
+<br><!--<br>Follow<br>-->
+<!--<div class="social">
                       
                         <a href="https://www.linkedin.com/in/jayzonline" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         <a href="https://www.facebook.com/jayzonlinez" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
                         <a href="https://twitter.com/jayzonlinez" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                         <a href="https://www.instagram.com/iamjayagovind" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                       <a></a>
-                    </div>
+                    </div>-->
 		
 
 	</div>
